[project]
name = "dataminer-sdk"
version = "0.1.0"
description = "Python library to interact with the DataMiner Web Services v1 API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
